exercises/ex-2-01/manifests/pong-deployment.yaml
apiVersion: apps/v1
kind: Pod
metadata:
  name: pingpong
  labels:
    app: pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: pingpong-image
          imagePullPolicy: IfNotPresent
