exercises/ex-2-01/manifests/logoutput-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashresponse-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput1 #this is important to match the label of the pod
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 5000
