exercises/ex-2-01/manifests/pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong1 #this is important to match the label of the pod
  ports:
    - port: 3001
      protocol: TCP
      targetPort: 5000
