exercises/ex-2-01/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-ingress
  # annotations:
  #   traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: hashresponse-svc
            port:
              number: 3001
      - path: "/pingpong"
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 3001
      - path: "/count"
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 3001
